Integer(int) -> Integer.valueOf(int). Hoorah.